Allow different colours to be displayed in a report and allow users to choose which fields are displayed in an export.

--- a/lib/static/style/auto/reports.css
+++ b/lib/static/style/auto/reports.css
@@ -63,3 +63,13 @@ div.ep_report_compliance_text {
 	font-weight: bold;
 	font-size: 20px;
 }
+
+div#ep_report_export_content_inner form > input, div#ep_report_export_content_inner form > select{
+	margin: 5px 0px;
+}
+
+div#ep_report_export_content_inner .ep_tab_panel input
+{
+	margin-left: 5px;
+	vertical-align: middle;
+}
