Numerous changes to GRF. Includes EPrint and User reports to allow people to search for EPrints/Users and include only the fields they would like in the export. Also provides options for grouping by and sorting by fields within the reports. HTML report export (which can be used to print a PDF from the browser) is also included as a default export format.

--- a/lib/static/style/auto/reports.css
+++ b/lib/static/style/auto/reports.css
@@ -12,6 +12,12 @@ div.ep_report_row_ok {
 	opacity: 0.8;
 }
 
+div.ep_report_row_ok.ep_report_row_no_compliance {
+        border-left: solid 7px #1b4b73;
+	opacity: 0.8;
+}
+
+
 div.ep_report_grouping {
 	margin: 20px 0px 10px 0px;
 	font-size: 16px;
@@ -91,4 +97,13 @@ div#ep_report_export_content_inner .report_export_options h4
 div#ep_report_export_content_inner .report_export_options ul
 {
 	padding: 0 10px 0 0;
+}
+
+/* HTML Reports */
+a.html_report_print{
+	text-decoration: none;	
+}
+
+a.html_report_print:hover{
+	color: white;	
 }
